refactor: touch detector

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,8 +2,5 @@
 	"appId": "jp.socious.network",
 	"appName": "Socious",
 	"webDir": "dist",
-	"bundledWebRuntime": false,
-	"server": {
-		"hostname": "dev.socious.io"
-	}
+	"bundledWebRuntime": false
 }
