--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -2,5 +2,9 @@
 	"appId": "jp.socious.network",
 	"appName": "Socious",
 	"webDir": "dist",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"url": "http://0.0.0.0:3000",
+		"cleartext": true
+	}
 }
