--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/core": "^4.6.1",
     "@capacitor/ios": "^4.6.1",
     "@tanstack/react-location": "^3.7.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
