feat: store contact-list data in store

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-location": "^3.7.4",
     "moment": "^2.29.4",
+    "axios": "^1.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
