--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@capacitor/ios": "^4.6.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-location": "^3.7.4",
+    "axios": "^1.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
