--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "^29.2.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "babel-loader": "^8.3.0",
     "cypress": "^12.3.0",
