--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/android": "^4.6.1",
     "@capacitor/core": "^4.6.1",
     "@capacitor/ios": "^4.6.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-location": "^3.7.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
