--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@capacitor/android": "^4.6.1",
     "@capacitor/core": "^4.6.1",
     "@capacitor/ios": "^4.6.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.6",
     "@tanstack/react-location": "^3.7.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
