fix: build linting

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000 --host",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    // "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "jest --watch",
     "storybook": "start-storybook -p 6006",
