--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@capacitor/android": "^4.6.1",
     "@capacitor/core": "^4.6.1",
     "@capacitor/ios": "^4.6.1",
-    "@reduxjs/toolkit": "^1.9.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.6",
+    "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-location": "^3.7.4",
-    "moment": "^2.29.4",
     "axios": "^1.2.3",
+    "iso-country-currency": "^0.6.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroller": "^1.2.6",
