--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-infinite-scroller": "^1.2.6",
     "react-redux": "^8.0.5"
   },
