fix: directory wrong urls

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -6,5 +6,13 @@
 	"server": {
 		"url": "http://192.168.1.6:3000",
 		"cleartext": true
+	},
+	"plugins": {
+		"CapacitorHttp": {
+			"enabled": true
+		},
+		"CapacitorCookies": {
+			"enabled": true
+		}
 	}
 }
