--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.2.3",
     "iso-country-currency": "^0.6.0",
     "moment": "^2.29.4",
+    "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
@@ -46,6 +47,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.4",
+    "@types/ramda": "^0.28.23",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-infinite-scroller": "^1.2.3",
