--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-location": "^3.7.4",
     "axios": "^1.2.3",
     "iso-country-currency": "^0.6.0",
+    "jetifier": "^2.0.0",
     "moment": "^2.29.4",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
