--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.43.1",
     "react-infinite-scroller": "^1.2.6",
     "react-redux": "^8.0.5",
+    "vite-tsconfig-paths": "^4.0.5",
     "web3": "^1.8.2"
   },
   "devDependencies": {
