--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "test": "jest --watch",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "open:android": "npm run build && npx cap sync android && npx cap open android",
+    "open:ios": "npm run build && npx cap sync ios && npx cap open ios"
   },
   "dependencies": {
     "@capacitor/action-sheet": "^4.1.0",
@@ -27,7 +29,6 @@
     "@tanstack/react-location": "^3.7.4",
     "axios": "^1.2.3",
     "iso-country-currency": "^0.6.0",
-    "jetifier": "^2.0.0",
     "moment": "^2.29.4",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
