feat: add markdown convertion

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -3,6 +3,9 @@
 	"appName": "Socious",
 	"webDir": "dist",
 	"bundledWebRuntime": false,
+	"server": {
+		"hostname": "socious.io"
+	},
 	"plugins": {
 		"CapacitorCookies": {
 			"enabled": true
