--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/dialog": "^4.1.0",
     "@capacitor/haptics": "^4.1.0",
     "@capacitor/ios": "^4.6.1",
+    "@capacitor/preferences": "^4.0.2",
     "@capacitor/toast": "^4.1.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
