--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-location": "^3.7.4",
     "axios": "^1.2.3",
     "iso-country-currency": "^0.6.0",
+    "js-cookie": "^3.0.1",
     "markdown-to-jsx": "^7.1.9",
     "moment": "^2.29.4",
     "ramda": "^0.28.0",
@@ -59,6 +60,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.4",
+    "@types/js-cookie": "^3.0.3",
     "@types/ramda": "^0.28.23",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
