--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation project(':capacitor-action-sheet')
     implementation project(':capacitor-dialog')
     implementation project(':capacitor-haptics')
+    implementation project(':capacitor-preferences')
     implementation project(':capacitor-toast')
 
 }
