fix: android cors issue

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -3,6 +3,10 @@
 	"appName": "Socious",
 	"webDir": "dist",
 	"bundledWebRuntime": false,
+	"server": {
+		"hostname": "socious.io",
+		"androidScheme": "https"
+	},
 	"plugins": {
 		"CapacitorCookies": {
 			"enabled": true
