feat: add category component

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -4,7 +4,7 @@
 	"webDir": "dist",
 	"bundledWebRuntime": false,
 	"server": {
-		"hostname": "socious.io",
+		"hostname": "capacitor.native",
 		"androidScheme": "https"
 	},
 	"plugins": {
