--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -26,6 +26,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+	<string>“Socious” Would Like to Access Your Photos.
+  Allow access to photos to upload photos from your library in order to add your profile photo or attach images to your post.”
+     </string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
