--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@capacitor/action-sheet": "^4.1.0",
     "@capacitor/android": "^4.6.1",
+    "@capacitor/app": "^4.1.1",
     "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "^4.6.1",
     "@capacitor/dialog": "^4.1.0",
