--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000 --host 0.0.0.0",
-    "build": "vite build",
+    "dev": "vite --port 3000 --host 0.0.0.0 --mode development",
+    "build": "vite build --mode production",
     "preview": "vite preview",
     "test": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "open:android": "npm run build && npx cap sync android && npx cap open android",
-    "open:ios": "npm run build && npx cap sync ios && npx cap open ios",
+    "open:android": "vite build --mode production && npx cap sync android && npx cap open android",
+    "open:ios": "vite build --mode production && npx cap sync ios && npx cap open ios",
     "build:icons": "npx @capacitor/assets generate --iconBackgroundColor '#183E3B' --splashBackgroundColor '#183E3B'"
   },
   "dependencies": {
