--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:icons": "npx @capacitor/assets generate --iconBackgroundColor '#183E3B' --splashBackgroundColor '#183E3B'"
   },
   "dependencies": {
+    "@capacitor-firebase/messaging": "^1.4.0",
     "@capacitor/action-sheet": "^4.1.0",
     "@capacitor/android": "^4.6.1",
     "@capacitor/app": "^4.1.1",
@@ -24,6 +25,7 @@
     "@capacitor/haptics": "^4.1.0",
     "@capacitor/ios": "^4.6.1",
     "@capacitor/preferences": "^4.0.2",
+    "@capacitor/push-notifications": "^4.1.2",
     "@capacitor/toast": "^4.1.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -34,6 +36,7 @@
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/react": "^2.2.2",
     "axios": "^1.2.3",
+    "firebase": "^9.22.2",
     "iso-country-currency": "^0.6.0",
     "js-base64": "^3.7.5",
     "js-cookie": "^3.0.1",
