--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "moment": "^2.29.4",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-infinite-scroller": "^1.2.6",
