--- a/amplify.yml
+++ b/amplify.yml
@@ -6,9 +6,9 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run build
+        - if [ "${AWS_BRANCH}" = "production" ]; then "npx vite build --mode production"; fi
+        - if [ "${AWS_BRANCH}" = "main" ]; then echo "npx vite build --mode development"; fi
   artifacts:
-    # IMPORTANT - Please verify your build output directory
     baseDirectory: dist
     files:
       - '**/*'
