--- a/amplify.yml
+++ b/amplify.yml
@@ -6,8 +6,8 @@ frontend:
         - npm ci
     build:
       commands:
-        - if [ "${AWS_BRANCH}" = "production" ]; then "npx vite build --mode production"; fi
-        - if [ "${AWS_BRANCH}" = "main" ]; then "npx vite build --mode development"; fi
+        - if [ "${AWS_BRANCH}" = "production" ]; then npx vite build --mode production; fi
+        - if [ "${AWS_BRANCH}" = "main" ]; then npx vite build --mode development; fi
   artifacts:
     baseDirectory: dist
     files:
