refactor: bumped up the vertion to 6.1.3

--- a/amplify.yml
+++ b/amplify.yml
@@ -7,7 +7,7 @@ frontend:
     build:
       commands:
         - if [ "${AWS_BRANCH}" = "production" ]; then npx vite build --mode production; fi
-        - if [ "${AWS_BRANCH}" = "main" ]; then npx vite build --mode development; fi
+        - if [ "${AWS_BRANCH}" = "main" ]; then npx vite build --mode production; fi
   artifacts:
     baseDirectory: dist
     files:
