--- a/amplify.yml
+++ b/amplify.yml
@@ -8,7 +8,7 @@ frontend:
       commands:
         # - npx vite build --mode production
         - if [ "${AWS_BRANCH}" = "production" ]; then npx vite build --mode production; fi
-        - if [ "${AWS_BRANCH}" = "main" ]; then npx vite build --mode production; fi
+        - if [ "${AWS_BRANCH}" = "main" ]; then npx vite build --mode development; fi
   artifacts:
     baseDirectory: dist
     files:
