refactor: bumped up the vertion to 6.1.7

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - npm ci
     build:
       commands:
-        - if [ "${AWS_BRANCH}" = "production" ]; then npx vite build --mode production; fi
+        - if [ "${AWS_BRANCH}" = "prod" ]; then npx vite build --mode production; fi
         - if [ "${AWS_BRANCH}" = "main" ]; then npx vite build --mode development; fi
   artifacts:
     baseDirectory: dist
