--- a/environments/.env.development
+++ b/environments/.env.development
@@ -1,3 +1,4 @@
 VITE_ENV=development
 VITE_BASE_URL=https://dev.socious.io/api/v2
 VITE_BASE_URL_2=https://dev.socious.io/api/v2
+VITE_DAPP_ENV=mainet
