--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-redux": "^8.0.5",
     "socket.io-client": "^4.6.1",
     "ssi-auth-lib": "^0.0.6",
+    "tronweb": "^5.3.0",
     "vite-tsconfig-paths": "^4.0.5",
     "wagmi": "^0.12.8",
     "web3": "^1.8.2"
