--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.1",
     "react-infinite-scroller": "^1.2.6",
     "react-redux": "^8.0.5",
@@ -76,6 +77,7 @@
     "@types/ramda": "^0.28.23",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-infinite-scroller": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
