fix: authentication bug fixed & set expiration for auth cookies

--- a/environments/.env.production
+++ b/environments/.env.production
@@ -1,3 +1,5 @@
 VITE_ENV=production
 VITE_BASE_URL=https://socious.io/api/v2
 VITE_BASE_URL_2=https://socious.io/api/v2
+VITE_ACCESS_EXPIRE=0.0104166666666667
+VITE_REFRESH_EXPIRE=30
