--- a/environments/.env.development
+++ b/environments/.env.development
@@ -1,3 +1,5 @@
 VITE_ENV=development
 VITE_BASE_URL=https://dev.socious.io/api/v2
 VITE_BASE_URL_2=https://dev.socious.io/api/v2
+VITE_ACCESS_EXPIRE=0.0104166666666667
+VITE_REFRESH_EXPIRE=30
