--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/react": "^2.2.2",
     "axios": "^1.2.3",
+    "clsx": "^2.0.0",
     "firebase": "^9.22.2",
     "iso-country-currency": "^0.6.0",
     "js-base64": "^3.7.5",
