--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@stripe/stripe-js": "^2.1.0",
     "@tanstack/react-location": "^3.7.4",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/react": "^2.2.2",
     "axios": "^1.2.3",
