--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.1",
     "react-infinite-scroller": "^1.2.6",
