--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.15",
     "babel-loader": "^8.3.0",
     "cypress": "^12.17.3",
     "eslint": "^8.36.0",
@@ -94,8 +95,10 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "postcss": "^8.4.29",
     "prettier": "^2.8.7",
     "sass": "^1.57.1",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
