--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@datadog/browser-rum": "^4.50.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^3.3.2",
     "@ionic/pwa-elements": "^3.2.2",
     "@mui/material": "^5.11.6",
     "@reduxjs/toolkit": "^1.9.1",
@@ -51,7 +52,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.43.1",
+    "react-hook-form": "^7.47.0",
     "react-i18next": "^13.2.2",
     "react-infinite-scroller": "^1.2.6",
     "react-redux": "^8.0.5",
@@ -60,7 +61,8 @@
     "ssi-auth-lib": "^0.0.6",
     "vite-tsconfig-paths": "^4.0.5",
     "wagmi": "^0.12.8",
-    "web3": "^1.8.2"
+    "web3": "^1.8.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
