--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build:icons": "npx @capacitor/assets generate --iconBackgroundColor '#183E3B' --splashBackgroundColor '#183E3B'",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "story": "storybook dev -p 6006",
+    "story:build": "storybook build"
   },
   "dependencies": {
     "@capacitor-firebase/messaging": "^1.4.0",
