--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "@capacitor/push-notifications": "^4.1.2",
     "@capacitor/toast": "^4.1.0",
     "@datadog/browser-rum": "^4.50.1",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@ionic/pwa-elements": "^3.2.2",
-    "@mui/material": "^5.11.6",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.1",
     "@stripe/stripe-js": "^2.1.0",
     "@web3modal/ethereum": "^2.2.2",
