--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "story": "storybook dev -p 6006",
-    "story:build": "storybook build"
+    "story:build": "storybook build",
+    "prettier": "npx prettier  .",
+    "prettier:fix": "npx prettier -w ."
   },
   "dependencies": {
     "@capacitor-firebase/messaging": "^1.4.0",
