--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.2.2",
     "react-infinite-scroller": "^1.2.6",
+    "react-otp-input": "^3.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.16.0",
     "socket.io-client": "^4.6.1",
