--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.2",
     "react-error-boundary": "^4.0.11",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.47.0",
