--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/react": "^2.2.2",
     "axios": "^1.5.1",
+    "country-flag-icons": "^1.5.9",
     "firebase": "^9.22.2",
     "i18next-browser-languagedetector": "^7.1.0",
     "iso-country-currency": "^0.6.0",
