Added figma link to story book

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic/pwa-elements": "^3.2.2",
     "@mui/material": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.1",
+    "@storybook/addon-designs": "^7.0.7",
     "@stripe/stripe-js": "^2.1.0",
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/react": "^2.2.2",
