--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,8 @@
     "react-app/jest",
     "prettier",
     "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "eslint:recommended",
     "plugin:storybook/recommended"
   ],
   "plugins": ["@typescript-eslint", "import"],
