--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@storybook/addon-designs": "^7.0.7",
     "@stripe/stripe-js": "^2.1.0",
+    "@tanstack/react-table": "^8.11.7",
     "@web3modal/ethers": "^3.5.3",
     "axios": "^1.5.1",
     "country-flag-icons": "^1.5.9",
