--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ dist-ssr
 *.sw?
 .DS_Store
 .env
+.env.test
+.env.dev
 .env.development
 .env.production
 *.orig
@@ -31,6 +33,5 @@ dist-ssr
 cypress/videos/
 cypress/screenshots/
 cypress.env.json
+
 storybook-static
-node_modules/.package-lock.json
-.env.dev
