--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "autoprefixer": "^10.4.15",
     "babel-loader": "^8.3.0",
     "cypress": "^13.7.1",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
