--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "cypress:run": "cypress run",
     "story": "storybook dev -p 6006",
     "story:build": "storybook build",
+    "prepare": "husky install",
     "prettier": "npx prettier  .",
-    "prettier:fix": "npx prettier -w ."
+    "prettier:fix": "npx prettier --write",
+    "eslint:fix": "eslint --fix",
+    "typecheck": "tsc",
+    "typecheck:staged": "tsc-files",
+    "lint": "lint-staged"
   },
   "dependencies": {
     "@capacitor-firebase/messaging": "^1.4.0",
@@ -112,23 +117,39 @@
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsdoc": "^48.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "husky": "^9.0.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "sass": "^1.57.1",
     "storybook": "^7.5.0",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.3",
+    "tsc-files": "^1.1.4",
+    "typescript": "^5.4.3",
     "vite": "^4.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "npm run eslint:fix",
+      "npm run prettier:fix"
+    ],
+    "*.{css,scss,md}": "npm run prettier:fix"
   }
 }
