--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,7 @@ jobs:
       run: npm install
 
     - name: Start server and run unit tests
-      run: npm run test
+      run: npm run test &
       env:
         PORT: 3000
         VITE_ENV: development
