--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
     "lint": "lint-staged"
   },
   "dependencies": {
-    "@capacitor-firebase/messaging": "^1.4.0",
-    "@capacitor/action-sheet": "^4.1.0",
-    "@capacitor/android": "^4.6.1",
-    "@capacitor/app": "^4.1.1",
-    "@capacitor/camera": "^4.1.4",
-    "@capacitor/core": "^4.6.1",
-    "@capacitor/dialog": "^4.1.0",
-    "@capacitor/haptics": "^4.1.0",
-    "@capacitor/ios": "^4.6.1",
-    "@capacitor/preferences": "^4.0.2",
-    "@capacitor/push-notifications": "^4.1.2",
-    "@capacitor/toast": "^4.1.0",
+    "@capacitor-firebase/messaging": "^5.0.0",
+    "@capacitor/action-sheet": "^5.0.0",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/camera": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/dialog": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/preferences": "^5.0.0",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/toast": "^5.0.0",
+    "@capgo/capacitor-updater": "^5.9.2",
     "@datadog/browser-rum": "^4.50.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -50,7 +51,7 @@
     "axios": "^1.5.1",
     "country-flag-icons": "^1.5.9",
     "ethers": "^6.9.2",
-    "firebase": "^9.22.2",
+    "firebase": "^10.11.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "iso-country-currency": "^0.6.0",
     "js-base64": "^3.7.5",
@@ -81,8 +82,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
-    "@capacitor/assets": "^2.0.4",
-    "@capacitor/cli": "^4.6.1",
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/cli": "^6.0.0",
     "@storybook/addon-a11y": "^7.6.7",
     "@storybook/addon-essentials": "^7.5.0",
     "@storybook/addon-interactions": "^7.5.0",
