--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "vite --port 3000 --host 0.0.0.0 --mode development",
     "preview": "vite preview",
     "test": "vite --port 3000 --host 0.0.0.0 --mode test",
-    "open:android": "vite build --mode production && npx cap sync android && npx cap open android",
-    "open:ios": "vite build --mode production && npx cap sync ios && npx cap open ios",
+    "build": "vite build --mode production",
+    "make:android": "npm run build && rm -rf android && npx cap add android",
+    "make:ios": "npm run build && rm -rf ios && npx cap add ios",
     "build:icons": "npx @capacitor/assets generate --iconBackgroundColor '#183E3B' --splashBackgroundColor '#183E3B'",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
