--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -18,11 +18,11 @@ jobs:
         with:
           node-version: '20'
 
-      # - name: Setup Ruby, JRuby and TruffleRuby
-      #   uses: ruby/setup-ruby@v1.174.0
-      #   with:
-      #     ruby-version: '3.3' # Not needed with a .ruby-version file
-      #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - name: Setup Ruby, JRuby and TruffleRuby
+        uses: ruby/setup-ruby@v1.174.0
+        with:
+          ruby-version: '3.3' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           
 
       - name: Install Node.js dependencies
@@ -39,16 +39,15 @@ jobs:
           gem install bundler
           cp Gemfile ./android
 
-      # - name: Installing Fastlane with Bundler
-      #   run: |
-      #     cd android
-      #     bundle update
-      #     bundle install
+      - name: Installing Fastlane with Bundler
+        run: |
+          cd android
+          bundle update
+          bundle install
 
       - name: Configurating Fastlane
         run: |
-          cd android
-          fastlane init
+          fastlane beta
 
       - name: Testing the environment
         run: |
