--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -44,9 +44,12 @@ jobs:
           cd android
           bundle update
           bundle install
+          cd ..
 
       - name: Configurating Fastlane
         run: |
+          cp fastlane/android android
+          mv android/android-config android/fastlane
           fastlane beta
 
       - name: Testing the environment
