--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -61,8 +61,7 @@ jobs:
 
       - name: Testing the environment
         run: |
-          ls
-          pwd
+          echo ${{ github.ref }}
 
       
 
