--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./android/app/build/outputs/apk/release/app-release-unsigned.apk
-          asset_name: Socious-${{ github.ref_name }}
+          asset_name: Socious-${{ github.ref_name }}.apk
           tag: ${{ github.ref }}
           overwrite: true
           body: "This is my release text"
