--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -63,7 +63,7 @@ jobs:
           sed -i 's|ANDROID_KEY_ALIAS|${{ secrets.ANDROID_KEY_ALIAS }}|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_PASSWORD|${{ secrets.ANDROID_KEY_PASSWORD }}|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_STORE_PASSWORD|${{ secrets.ANDROID_KEY_STORE_PASSWORD }}|g' fastlane/Fastfile
-          echo -n "${{ secret.ANDROID_KEY_STORE }}" > AndroidKeystore.jks
+          echo -n "${{ secrets.ANDROID_KEY_STORE }}" > AndroidKeystore.jks
           cat fastlane/Fastfile
           cat AndroidKeystore.jks
           fastlane release
