--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -64,7 +64,7 @@ jobs:
           sed -i 's|ANDROID_KEY_PASSWORD|${{ secrets.ANDROID_KEY_PASSWORD }}|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_STORE_PASSWORD|${{ secrets.ANDROID_KEY_STORE_PASSWORD }}|g' fastlane/Fastfile
           echo "${{ secrets.ANDROID_KEY_STORE_BASE64 }}" > AndroidKeystore.jks.base64
-          base64 --decode -i AndroidKeystore.jks.base64 -o AndroidKeystore.jks.jks
+          cat AndroidKeystore.jks.base64 | base64 --decode > AndroidKeystore.jks
           cat fastlane/Fastfile
           cat AndroidKeystore.jks
           fastlane release
