--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -65,9 +65,7 @@ jobs:
           sed -i 's|ANDROID_KEY_STORE_PASSWORD|${{ secrets.ANDROID_KEY_STORE_PASSWORD }}|g' fastlane/Fastfile
           echo "${{ secrets.ANDROID_KEY_STORE_BASE64 }}" > AndroidKeystore.jks.base64
           cat AndroidKeystore.jks.base64 | base64 --decode > AndroidKeystore.jks
-          cat fastlane/Fastfile
-          cat AndroidKeystore.jks
-          fastlane release
+          bundle exec fastlane release
       
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
