--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -67,6 +67,7 @@ jobs:
           echo "${{ secrets.ANDROID_KEY_STORE_BASE64 }}" > AndroidKeystore.jks.base64
           cat AndroidKeystore.jks.base64 | base64 --decode > app/AndroidKeystore.jks
           sed -i 's|GITHUB_WORKSPACE|$GITHUB_WORKSPACE/android|g' fastlane/Fastfile
+          cat fastlane/Fastfile
           fastlane release
       
       # - name: Upload binaries to release
