--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -65,7 +65,9 @@ jobs:
           sed -i 's|ANDROID_KEY_PASSWORD|${{ secrets.ANDROID_KEY_PASSWORD }}|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_STORE_PASSWORD|${{ secrets.ANDROID_KEY_STORE_PASSWORD }}|g' fastlane/Fastfile
           echo "${{ secrets.ANDROID_KEY_STORE_BASE64 }}" > AndroidKeystore.jks.base64
+          cat AndroidKeystore.jks.base64
           cat AndroidKeystore.jks.base64 | base64 --decode > AndroidKeystore.jks
+          cat ${{ github.workspace }}/android/AndroidKeystore.jks
           sed -i 's|GITHUB_WORKSPACE|${{ github.workspace }}/android|g' fastlane/Fastfile
           fastlane release
           
