--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -60,13 +60,11 @@ jobs:
           cp -R fastlane/android-config android
           mv android/android-config android/fastlane
           cd android
-          sed -i 's|ANDROID_KEY_ALIAS|${{ vars.ANDROID_KEY_ALIAS }}|g' fastlane/Fastfile
-          sed -i 's|ANDROID_KEY_PASSWORD|${{ vars.ANDROID_KEY_PASSWORD }}|g' fastlane/Fastfile
-          sed -i 's|ANDROID_KEY_STORE_PASSWORD|${{ vars.ANDROID_KEY_STORE_PASSWORD }}|g' fastlane/Fastfile
-          echo ${{ vars.ANDROID_KEY_STORE_BASE64 }} > AndroidKeystore.jks.base64
-          cat AndroidKeystore.jks.base64
+          sed -i 's|ANDROID_KEY_ALIAS|${{ secrets.ANDROID_KEY_ALIAS }}|g' fastlane/Fastfile
+          sed -i 's|ANDROID_KEY_PASSWORD|${{ secrets.ANDROID_KEY_PASSWORD }}|g' fastlane/Fastfile
+          sed -i 's|ANDROID_KEY_STORE_PASSWORD|${{ secrets.ANDROID_KEY_STORE_PASSWORD }}|g' fastlane/Fastfile
+          echo ${{ secrets.ANDROID_KEY_STORE_BASE64 }} > AndroidKeystore.jks.base64
           cat AndroidKeystore.jks.base64 | base64 --decode > AndroidKeystore.jks
-          cat ${{ github.workspace }}/android/AndroidKeystore.jks
           sed -i 's|GITHUB_WORKSPACE|${{ github.workspace }}/android|g' fastlane/Fastfile
           fastlane release
           
