--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -60,6 +60,7 @@ jobs:
           cp -R fastlane/android-config android
           mv android/android-config android/fastlane
           cd android
+          keytool
           sed -i 's|ANDROID_KEY_ALIAS|${{ secrets.ANDROID_KEY_ALIAS }}|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_PASSWORD|${{ secrets.ANDROID_KEY_PASSWORD }}|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_STORE_PASSWORD|${{ secrets.ANDROID_KEY_STORE_PASSWORD }}|g' fastlane/Fastfile
