--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -64,9 +64,8 @@ jobs:
           sed -i 's|ANDROID_KEY_ALIAS|${{ secrets.ANDROID_KEY_ALIAS }}|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_PASSWORD|${{ secrets.ANDROID_KEY_PASSWORD }}|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_STORE_PASSWORD|${{ secrets.ANDROID_KEY_STORE_PASSWORD }}|g' fastlane/Fastfile
-          echo ${{ secrets.ANDROID_KEY_STORE_BASE64 }} > AndroidKeystore.jks.base64
-          cat AndroidKeystore.jks.base64 | base64 --decode > AndroidKeystore.jks
-          sed -i 's|GITHUB_WORKSPACE|${{ github.workspace }}/android|g' fastlane/Fastfile
+          keytool -genkey -storepass ${{ secrets.ANDROID_KEY_STORE_PASSWORD }} -keypass ${{ secrets.ANDROID_KEY_PASSWORD }} -alias ${{ secrets.ANDROID_KEY_ALIAS }} -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=${{ vars.KeytoolFirstName }} ${{ vars.KeytoolLastName }}, OU=${{ vars.KeytoolOrganizationUnit }}, O=${{ vars.KeytoolOrganization }}, L=${{ vars.KeytoolCityOrLocality }}, S=${{ vars.KeytoolStateOrProvience }}, C=${{ vars.KeytoolTwoLetterCountryCode}}" -keystore build-release.keystore
+          sed -i 's|ANDROID_KEY_STORE_LOCATION|${{ github.workspace }}/android/build-release.keystore|g' fastlane/Fastfile
           fastlane release
           
           
